# clipboard-manager

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.agents/skills/new-component/: SKILL.md
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/clipboard/: formats.rs  mod.rs
src/db/: mod.rs  operations.rs  schema.rs
src/settings/: mod.rs
src/shortcuts/: mod.rs
src/tray/: mod.rs
src/ui/: list_item.rs  main_window.rs  mod.rs  search_bar.rs  settings_window.rs  virtual_list.rs
src/utils/: mod.rs
