[package]
name = "clipboard-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
# UI Framework
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
core-text = "=21.0.0"
# Database
redb = "2.3"

# Clipboard
clipboard-rs = "0.2"

# System Integration
tray-icon = "0.19"
global-hotkey = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"
chrono = "0.4"
image = "0.25"
log = "0.4"
env_logger = "0.11"
dirs = "5.0"
parking_lot = "0.12"
rust-embed = "8.5"

# Async
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
smol = "2.0"
# gpui = "0.2.2"
# core-text = "21.0.0"
# core-graphics = "0.25.0"
# gpui-component = "0.5.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
raw-window-handle = "0.6"
cocoa = "0.25"

[build-dependencies]
